--- a/front-end-trials/package.json
+++ b/front-end-trials/package.json
@@ -24,6 +24,7 @@
     "react-error-boundary": "^4.0.12",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.30.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
